tests/errors/compiler/expected_apost_after_char_const/string_in_char.c
void main()
{
	char ch = 'cc';
}
